--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Soy Ingeniero De Sistemas, Especialista en ingenieria de software y arquitecto de software. Mi pasión es el desarrollo de software!!">
   <meta name="author" content="Anibal Jose Guerra Zapata">
-  <title>CV - Anibal Guerra</title>
+  <title>CV - Andrea Garcia</title>
   <!-- Favicon -->
   <link href="./assets/img/icono.png" rel="icon" type="image/png">
   <!-- Fonts -->
